--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/deamanagement?useSSL=false&all
 spring.datasource.username=root
 spring.datasource.password=12345678
 spring.datasource.platform=mysql
+
+server.servlet.contextPath=/api
+
+spring.jpa.show_sql=false
+spring.jpa.properties.hibernate.format_sql=true
